--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>TYPESCRYPT CÔTÉ CLIENT</h1>
     <p id="para"></p>
+    <script src="./Dist/index.bundle.js"></script>
 </body>
 
 </html>
