--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>TYPESCRYPT CÔTÉ CLIENT</h1>
-    <p id="para"></p>
+    <p id="para">Paragraphe</p>
     <script src="./Dist/index.bundle.js"></script>
 </body>
 
