assign button for increment and decrement

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <h1>TYPESCRYPT CÔTÉ CLIENT</h1>
-    <p id="para">Paragraphe</p>
+    <button class="increment">INCREMENTER</button>
+    <button class="decrement">DECREMENTER</button>
+    <p class='para'></p>
     <script src="./Dist/index.bundle.js"></script>
 </body>
 
